Style menu demo page.

--- a/2/index.html
+++ b/2/index.html
@@ -36,8 +36,9 @@
             <h1>Simple menu animation</h1>
 
             <ul>
-                <li>Mobile menu doenst work in IE8, but this probably doesnt matter.</li>
-                <li>Animation not working in Opera Mobile? </li>
+                <li>Mobile menu doens't work in IE8, but this probably doesnt matter.</li>
+                <li>Menu opens but without animation in IE9</li> 
+                <li>Animation wont work in Opera Mobile? </li>
             </ul>
             
             <div class="row">
