--- a/3/index.html
+++ b/3/index.html
@@ -13,6 +13,8 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+        <script type='application/javascript' src='js/fastclick.js'></script>
+        
         <script src="js/modernizr.js" ></script>
         
         <script src="js/jquery.touchSwipe.js" ></script>
