Add annimation to burger icon as menu annimates.

--- a/3/index.html
+++ b/3/index.html
@@ -34,7 +34,12 @@
             <li><a href="#">Link 3</a></li>
         </ul>
         <div class="content container-fluid">
-            <div class="menu-trigger">Open<br> menu</div>
+            <div class="menu-trigger">
+                <div class='menu-burger one'></div>
+                <div class='menu-burger two'></div>
+                <div class='menu-burger three'></div>
+            </div>
+            
             <h1>Simple menu animation</h1>
 
             <ul>
